Fixed some issues with margin spacing

--- a/src/stylesheets/FollowerItem.module.css
+++ b/src/stylesheets/FollowerItem.module.css
@@ -6,7 +6,7 @@
     border-radius: 3px;
     box-shadow: 0 0 2px var(--accent);
     align-items: center;
-    margin-top: .4rem;
+    margin:  .4rem;
 }
 
 
